--- a/frontend/src/features/Discover/PokemonSearchBar.css
+++ b/frontend/src/features/Discover/PokemonSearchBar.css
@@ -177,7 +177,11 @@
   transform: unset;
 }
 .pokemon-search-bar {
-  top:unset;
+  top:0px
+}
+.pokemon-search-bar h3 {
+  margin-block-end: 5px;
+  margin-block-start: 5px;
 }
 }
 
@@ -202,15 +206,72 @@
     left: unset;
     transform: unset;
   }
-  .pokemon-search-bar {
-    top:unset;
-  }
   }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-
+  .search-bar-container {
+    flex-direction: column;
+  }
+  .pokemon-variant, .location-search, .ownership-status {
+    flex-direction: column;
+  }
+  .controls-container {
+    flex-direction: column;
+    padding-top: 0px;
+  }
+  .error-message {
+    height: auto;
+    margin-left: 0px;
+    text-align: center;
+  }
+  .view-controls {
+    position: relative;
+    left: unset;
+    transform: unset;
+  }
 }
 
-@media (min-width: 1024px) {
 
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .search-bar-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokemon-variant {
+    width: 100%; /* Full width for the first row */
+    margin-bottom: 10px; /* Space between the rows */
+  }
+
+  .location-ownership-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between; /* Spread location and ownership side by side */
+    gap: 20px; /* Add spacing between location and ownership */
+  }
+
+  .location-search, .ownership-status {
+    flex: 1; /* Ensure both take equal space */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .controls-container {
+    flex-direction: column;
+    padding-top: 0px;
+  }
+
+  .error-message {
+    height: auto;
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  .view-controls {
+    position: relative;
+    left: unset;
+    transform: unset;
+  }
 }
+
+
