--- a/frontend/src/features/Discover/SearchParameters/OwnershipComponents/FriendshipSearch.css
+++ b/frontend/src/features/Discover/SearchParameters/OwnershipComponents/FriendshipSearch.css
@@ -53,7 +53,9 @@
   }
   
   @media (min-width: 768px) and (max-width: 1023px) {
-  
+    .friendship-search-options {
+        transform: scale(.65);
+    }
   }
   
   @media (min-width: 1024px) {
