--- a/frontend/src/features/Discover/SearchParameters/OwnershipComponents/TradeSearch.css
+++ b/frontend/src/features/Discover/SearchParameters/OwnershipComponents/TradeSearch.css
@@ -50,10 +50,21 @@
     margin-top: unset;
     margin-right: 0px;
   }
+  .trade-search-options .field input[type='checkbox'] {
+    margin-bottom: unset;
+    transform: scale(1)
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-
+  .trade-search-options {
+    margin-top: unset;
+    margin-right: 0px;
+  }
+  .trade-search-options .field input[type='checkbox'] {
+    margin-bottom: unset;
+    transform: scale(1)
+  }
 }
 
 @media (min-width: 1024px) {
